update swagger and tripShare, deleteTrip...
